--- a/dev/components/MainCharacters/maincharacters.css
+++ b/dev/components/MainCharacters/maincharacters.css
@@ -1,7 +1,6 @@
 .mainCharacters {
     max-width: 1040px;
     margin: 0 auto;
-    padding: 20px 0 40px;
 }
 
 .mainCharacters__inner {
@@ -12,36 +11,6 @@
 
 .mainCharacters__header {
     text-align: center;
+    margin-top: 0;
 }
 
-.mainCharacters__item {
-    background:#02afc5;
-    /* border-radius: 10px; */
-    box-shadow: 0 2px 4px rgba(53,201,221);
-}
-
-.mainCharacters__img {
-    width: 100%;
-    height: auto;
-    display: block;
-    margin: 0 auto;
-    /* border-radius: 10px 10px 0 0; */
-}
-
-.mainCharacters__title {
-    text-align: center;
-    color: #a9f3fd;
-    font-weight: normal;
-}
-
-.loading {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.loading__text {
-    text-transform: uppercase;
-    font-size: 2em;
-}
