add search component

--- a/dev/components/MainCharacters/maincharacters.css
+++ b/dev/components/MainCharacters/maincharacters.css
@@ -7,6 +7,7 @@
     display: grid;
     grid-gap: 10px;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    justify-content: center;
 }
 
 .mainCharacters__header {
